// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async function's time traveling 1`] = `
[
  [
    "CHECKPOINT",
  ],
  [
    "I",
    0,
    0,
  ],
  [
    "CHECKPOINT - 1",
  ],
  [
    "J",
    0,
    100,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    1,
    100,
  ],
  [
    "A:R1",
    100,
    0,
  ],
  [
    "CHECKPOINT - 2",
  ],
  [
    "J",
    1,
    300,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "A:R2",
    300,
    300,
  ],
  [
    "CHECKPOINT - 3",
  ],
  [
    "J",
    2,
    600,
  ],
  [
    "EXIT:",
    600,
  ],
  [
    "A:R3",
    600,
    1200,
  ],
  [
    "UNDO 1",
  ],
  [
    "CHECKPOINT - 3/2",
  ],
  [
    "J",
    2,
    601,
  ],
  [
    "EXIT:",
    601,
  ],
  [
    "A:R3/1",
    601,
    1202,
  ],
  [
    "UNDO 2",
  ],
  [
    "CHECKPOINT/3",
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "CONT 2",
    undefined,
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "J",
    2,
    602,
  ],
  [
    "EXIT:",
    602,
  ],
  [
    "A:R3/2",
    602,
    1204,
  ],
  [
    "UNDO3",
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "J",
    2,
    603,
  ],
  [
    "EXIT:",
    603,
  ],
  [
    "A:R3/3",
    603,
    1206,
  ],
  [
    "UNDO4",
  ],
  [
    "CHECKPOINT - 3/4",
  ],
  [
    "J",
    2,
    604,
  ],
  [
    "EXIT:",
    604,
  ],
  [
    "A:R3/4",
    604,
    1208,
  ],
  [
    "UNDO5",
  ],
  [
    "WRITE",
  ],
  [
    "CHECKPOINT - 3/5",
  ],
  [
    "J",
    2,
    605,
  ],
  [
    "EXIT:",
    605,
  ],
  [
    "A:R3/5",
    605,
    1210,
  ],
  [
    "UNDO 6",
  ],
  [
    "CHECKPOINT - 3/6",
  ],
  [
    "J",
    2,
    606,
  ],
  [
    "EXIT:",
    606,
  ],
  [
    "A:R3/6",
    606,
    1212,
  ],
  [
    "UNDO 7",
  ],
  [
    "CHECKPOINT - 3/7",
  ],
  [
    "J",
    2,
    607,
  ],
  [
    "EXIT:",
    607,
  ],
  [
    "A:R3/7",
    607,
    1214,
  ],
]
`;

exports[`async generator functions time traveling 1`] = `
[
  [
    "CHECKPOINT",
  ],
  [
    "I",
    0,
    0,
  ],
  [
    "CHECKPOINT - 1",
  ],
  [
    "K",
    100,
    100,
  ],
  [
    "J",
    0,
    100,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    1,
    100,
  ],
  [
    "A:R1",
    100,
    0,
  ],
  [
    "CHECKPOINT - 2",
  ],
  [
    "K",
    300,
    300,
  ],
  [
    "J",
    1,
    300,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "A:R2",
    300,
    300,
  ],
  [
    "CHECKPOINT - 3",
  ],
  [
    "K",
    600,
    600,
  ],
  [
    "J",
    2,
    600,
  ],
  [
    "EXIT:",
    600,
  ],
  [
    "A:R3",
    600,
    1200,
  ],
  [
    "UNDO 1",
  ],
  [
    "CHECKPOINT - 3/2",
  ],
  [
    "K",
    601,
    601,
  ],
  [
    "J",
    2,
    601,
  ],
  [
    "EXIT:",
    601,
  ],
  [
    "A:R3/1",
    601,
    1202,
  ],
  [
    "UNDO 2",
  ],
  [
    "CHECKPOINT/3",
  ],
  [
    "I",
    2,
    300,
  ],
  [
    "CONT 2",
    undefined,
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "K",
    602,
    602,
  ],
  [
    "J",
    2,
    602,
  ],
  [
    "EXIT:",
    602,
  ],
  [
    "A:R3/2",
    602,
    1204,
  ],
  [
    "UNDO3",
  ],
  [
    "CHECKPOINT - 3/3",
  ],
  [
    "K",
    603,
    603,
  ],
  [
    "J",
    2,
    603,
  ],
  [
    "EXIT:",
    603,
  ],
  [
    "A:R3/3",
    603,
    1206,
  ],
  [
    "UNDO4",
  ],
  [
    "CHECKPOINT - 3/4",
  ],
  [
    "K",
    604,
    604,
  ],
  [
    "J",
    2,
    604,
  ],
  [
    "EXIT:",
    604,
  ],
  [
    "A:R3/4",
    604,
    1208,
  ],
  [
    "UNDO5",
  ],
  [
    "WRITE",
  ],
  [
    "CHECKPOINT - 3/5",
  ],
  [
    "K",
    605,
    605,
  ],
  [
    "J",
    2,
    605,
  ],
  [
    "EXIT:",
    605,
  ],
  [
    "A:R3/5",
    605,
    1210,
  ],
  [
    "UNDO 6",
  ],
  [
    "CHECKPOINT - 3/6",
  ],
  [
    "K",
    606,
    606,
  ],
  [
    "J",
    2,
    606,
  ],
  [
    "EXIT:",
    606,
  ],
  [
    "A:R3/6",
    606,
    1212,
  ],
  [
    "UNDO 7",
  ],
  [
    "CHECKPOINT - 3/7",
  ],
  [
    "K",
    607,
    607,
  ],
  [
    "J",
    2,
    607,
  ],
  [
    "EXIT:",
    607,
  ],
  [
    "A:R3/7",
    607,
    1214,
  ],
]
`;

exports[`pure generator functions time traveling 1`] = `
[
  [
    "CHECKPOINT",
  ],
  [
    "I",
    0,
    0,
  ],
  [
    "C",
    1,
    0,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    1,
    1,
  ],
  [
    "C",
    3,
    1,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 1",
    10,
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 2",
    10,
  ],
  [
    "I",
    0,
    0,
  ],
  [
    "C",
    1,
    0,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    1,
    1,
  ],
  [
    "C",
    3,
    1,
  ],
  [
    "CHECKPOINT",
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 3",
    10,
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 4",
    10,
  ],
  [
    "I",
    2,
    3,
  ],
  [
    "C",
    10,
    6,
  ],
  [
    "DONE 5",
    10,
  ],
]
`;
